feat: integrate keycloak oauth2, user ratings, and advanced search Details:
- Infrastructure: Added Keycloak (Identity Provider) and Apache Kafka (Message Broker) services to Docker Compose.
- Security:
  - Integrated `spring-boot-starter-oauth2-client`.
  - Configured `SecurityConfig` for hybrid authentication (JWT + OAuth2/OIDC).
  - Updated `UserPrincipal` to implement `OAuth2User` and `OidcUser`.
  - Added CORS configuration for frontend integration.
- User & Ratings:
  - Implemented `UserController` (profile, password change).
  - Implemented `RatingService` allowing users to rate transaction partners.
  - Updated `User` model to support multiple auth providers (Local vs Keycloak).
- Search Logic: Enhanced `ProductService` and Repository to support recursive category search (searching a parent category includes all sub-categories).
- Refactor: Optimized Mappers using `UtilityClass` and `Stream.toList()`.