@@ -1,17 +1,18 @@
 package wnc.auction.backend.mapper;
 
+import lombok.experimental.UtilityClass;
 import wnc.auction.backend.dto.model.CategoryDto;
 import wnc.auction.backend.model.Category;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@UtilityClass
 public class CategoryMapper {
 
     public static CategoryDto toDto(Category category) {
         List<CategoryDto> children = category.getChildren().stream()
                 .map(CategoryMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
         return CategoryDto.builder()
                 .id(category.getId())
